After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723606 - Backlight controls use wrong XRANDR output property name
Backlight controls use wrong XRANDR output property name
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-04 12:35 UTC by Robert Ancell
Modified: 2014-02-05 10:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use specified output property name for brightness (2.28 KB, patch)
2014-02-04 12:38 UTC, Robert Ancell
accepted-commit_now Details | Review

Description Robert Ancell 2014-02-04 12:35:41 UTC
Brightness controls are set using the "BRIGHTNESS" XRANDR output property. This should be "Brightness" according to the XRANDR spec [1].

Some drivers (Intel) export both properties and some only the specified property (nvidia). Users of drivers that only export the specified property cannot change their brightness using brightness keys or see any brightness settings in gnome-control-center.

[1] http://cgit.freedesktop.org/xorg/proto/randrproto/tree/randrproto.txt section 9.1
Comment 1 Robert Ancell 2014-02-04 12:38:28 UTC
Created attachment 268067 [details] [review]
Use specified output property name for brightness

Note this doesn't support the BRIGHTNESS output property anymore. Potentially there might be drivers that only use this.
Comment 2 drago01 2014-02-04 20:25:28 UTC
Review of attachment 268067 [details] [review]:

Good catch. It is "Backlight" not "Brightness" though, so fix the commit message (maybe add some body and not just a subject) and push.
Comment 3 Robert Ancell 2014-02-05 08:36:20 UTC
Updated commit message and pushed as 6b7f7c66ecd93346f0513dd705d95fb6caf13741. Thanks for the review!