src/meta/atomnames.h
@@ -78,7 +78,7 @@ item(MULTIPLE)
 item(TIMESTAMP)
 item(VERSION)
 item(ATOM_PAIR)
-item(BACKLIGHT)
+item(Backlight)
 item(hotplug_mode_update)
 
 /* Oddities: These are used, and we need atoms for them,
